# C-study

./: CMakeLists.txt  README.md
include/: customString.h  process.h  pthreadSync.h  pthreadlock.h
main/: pthread.c  pthreadLock.c  pthreadSync.c  string.c  test.c
utility/: CMakeLists.txt
utility/customString/: CMakeLists.txt  customString.c
utility/pthread/: CMakeLists.txt  process.c
utility/pthreadLock/: CMakeLists.txt  pthreadlock.c
utility/pthreadSync/: CMakeLists.txt  pthreadSync.c
